Will be reused across views, so move out of catalog.

--- a/app/views/catalog/_document_list.html.erb
+++ b/app/views/catalog/_document_list.html.erb
@@ -1,19 +1,1 @@
-<div id="documents" class="row">
-  <%
-    grid = 12
-    cols = {
-      lg: 4,
-      md: 3,
-      sm: 2,
-      xs: 1 }
-    col_classes = cols.map { |k,v| "col-#{k}-#{grid / v}"}.join(' ')
-  %>
-  <% documents.each_with_index do |document, i| %>
-    <div class="clearfix <%= 
-      cols.map { |k,v| "hidden-#{k}" unless i % v == 0 }.join(' ')  
-    %>"></div>
-    <div class="document <%= col_classes %>">
-      <%= render document %>
-    </div>
-  <% end %>
-</div>
+<%= render partial: 'shared/document_list', locals: {documents: documents} %>
