search results and tabs are now using the same partials for grids.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -85,5 +85,8 @@
                margin: 0;
            }
         }
+        #documents .document {
+            border: none;
+        }
     }
 }
