--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -1,4 +1,20 @@
 .blacklight-catalog-index {
+    $col-md-12-5: 188px;
+    $col-lg-12-5: 228px;
+    
+    .col-12-5 {
+        // Hack for 5-across facet buttons, based on the bootstap code.
+        @media (min-width: $screen-md-min) { width: $col-md-12-5; }
+        @media (min-width: $screen-lg-min) { width: $col-lg-12-5; }
+        @media (min-width: $screen-md-min) {
+            width: 19.44%;
+            float: left;
+            position: relative;
+            min-height: 1px;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+    }
     .btn,.dropdown-menu {
         border-radius: 0px; // TODO: Perhaps move up?
     }
@@ -48,16 +64,8 @@
                     .facet-values {
                         background: $pale-grey;
                         font-weight: bold;
-                        // So the pull-down is the same width as the button above.
-                        // TODO: find something better?
-                        //@media (min-width: $screen-md-min) { width: 131.667px; }
-                        //@media (min-width: $screen-lg-min) { width: 165px; }
-                        @media (min-width: $screen-md-min) { width: ($screen-md-min) * 2/$grid-columns - $grid-gutter-width - 4px; }
-                        @media (min-width: $screen-lg-min) { width: ($screen-lg-min) * 2/$grid-columns - $grid-gutter-width - 5px; }
-                        // This comes from the bootstrap definition: ($screen-__-min) * 2/$grid-columns
-                        // ("2" because this is col-md-2.)
-                        // Make up for gutter: $grid-gutter-width
-                        // Fudge: I'm not sure why this is necessary: 4/5px;
+                        @media (min-width: $screen-md-min) { width: $col-md-12-5 - 32px; }
+                        @media (min-width: $screen-lg-min) { width: $col-lg-12-5 - 32px; }
                         .facet-label {
                             padding: 0px;
                             text-indent: 0px;
