--- a/app/views/shared/_tab_row.html.erb
+++ b/app/views/shared/_tab_row.html.erb
@@ -2,10 +2,15 @@
 <div class="row" id="<%= anchor %>">
   <% (item.tabs.keys).reject { |x| skip.include?(x) }.tap do |tabs|
     tabs.each do |tab| %>
-      <% is_current = tab == params[:tab] %>
-      <div class="tab col-md-2 <%= 'tab-current' if is_current %>">
-        <%= link_to_unless(is_current, tab.titlecase, "#{tab}##{anchor}") %>
-      </div>
+      <% unless tab == params[:tab] %>
+        <a    class="tab col-md-2" href="<%= tab %>#<%= anchor %>" >
+          <%= tab.titlecase %>
+        </a>
+      <% else %>
+        <span class="tab col-md-2 tab-current">
+          <%= tab.titlecase %>
+        </span>
+      <% end %>
     <% end if tabs.count > 1
     end %>
 </div>
