And if there is a transcript, include it on the page. Friendlier than AJAX?

--- a/app/views/catalog/_player.html.erb
+++ b/app/views/catalog/_player.html.erb
@@ -20,4 +20,7 @@
       -->
     <% end %>
   <% end %>
+  <% if @pbcore.transcript_html_src %>
+      <iframe src="<%= @pbcore.transcript_html_src %>"></iframe>
+  <% end %>
 </div>
