--- a/app/views/catalog/_player.html.erb
+++ b/app/views/catalog/_player.html.erb
@@ -20,8 +20,8 @@
       -->
     <% end %>
   <% end %>
-  <% if @pbcore.transcript_html_src %>
-      <iframe id="transcript" src="<%= @pbcore.transcript_html_src %>" 
+  <% if @pbcore.transcript_src %>
+      <iframe id="transcript" src="/transcripts/<%= @pbcore.id %>" 
               class="col-lg-8 col-md-7 col-sm-6 col-xs-12" 
               frameBorder="0" height="400"></iframe>
   <% end %>
