Replace calls to /catalog with /assets, but not convinced this is a good approach.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,7 @@
 @import "locals/home";
 @import "locals/collections-exhibits";
 @import "locals/tabs";
-@import "locals/catalog-index";
-@import "locals/catalog-show";
+@import "locals/assets-index";
+@import "locals/assets-show";
 @import "locals/series-index";
 @import "locals/plain";
