--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -1,4 +1,4 @@
-<a href="/catalog/<%= document.id %>">
+<a href="/assets/<%= document.id %>">
   <img src="<%= document[:thumbnail_src] %>">
   <div class="info">
     <%= document[:title] %>
