--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <form action="/catalog">
+        <form action="/assets">
           <input name="q" onchange="this.form.submit()"/>
           <span class="glyphicon glyphicon-search"></span>
         </form>
