--- a/app/views/catalog/_facet_limit.html.erb
+++ b/app/views/catalog/_facet_limit.html.erb
@@ -1,11 +1,6 @@
 <ul class="facet-values list-unstyled">
   <% paginator = facet_paginator(facet_field, display_facet) %>
-  <%= render_facet_limit_list paginator, field_name %>
-
-  <% unless paginator.last_page? || params[:action] == "facet" %>
-    <li class="more_facets_link">
-      <%= link_to t("more_#{field_name}_html", scope: 'blacklight.search.facets', default: :more_html, field_name: facet_field.label), 
-        search_facet_url(id: field_name), class: "more_facets_link" %>
-    </li>
-  <% end %>
+  <%# OV: Pass paginator.items rather than just paginator. %>
+  <%= render_facet_limit_list paginator.items, field_name %>
+  <%# OV: Remove more_facets_link. %>
 </ul>
