Multi-column, but crammed in the same width.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -62,6 +62,7 @@
                 .panel-body {
                     padding: 0px;
                     .facet-values {
+                        display: table-cell;
                         background: $pale-grey;
                         font-weight: bold;
                         @media (min-width: $screen-md-min) { width: $col-md-12-5 - 32px; }
