Redirect to first tab. (The "/boston-tv-news|american-archive/" bit is debatable: I feel that the behavior is special enough that if another collection needs to behave that way, the test should be updated.

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -16,7 +16,7 @@
         <% if current_tab.respond_to?(:each) %>
           <%= render partial: 'shared/document_list', locals: {documents: current_tab} %>
         <% else %>
-          <%= current_tab.html_safe %>
+          <%= current_tab.html_safe if current_tab %>
         <% end %>
       <% end %>
     </div>
