All the gnarly math is back in one partial. Rename for consistency. Looks good?

--- a/app/views/catalog/_document_list.html.erb
+++ b/app/views/catalog/_document_list.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'shared/document_list', locals: {documents: documents} %>
+<%= render partial: 'shared/document_grid', locals: {documents: documents} %>
