--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -8,5 +8,5 @@
       <h1><%= t('collections') %></h1>
     </div>
   </div>
-  <%= render partial: 'shared/grid', locals: {items: @all, path: 'collections'} %>  
+  <%= render partial: 'shared/collection_exhibit_grid', locals: {items: @all, path: 'collections'} %>  
 </div>
