--- a/app/views/exhibits/index.html.erb
+++ b/app/views/exhibits/index.html.erb
@@ -8,5 +8,5 @@
       <h1><%= t('exhibits') %></h1>
     </div>
   </div>
-  <%= render partial: 'shared/grid', locals: {items: @all, path: 'exhibits'} %>
+  <%= render partial: 'shared/collection_exhibit_grid', locals: {items: @all, path: 'exhibits'} %>
 </div>
