Remove TODOs. Colors are what they should be. Fix #55.

--- a/app/assets/stylesheets/globals/colors.css.scss
+++ b/app/assets/stylesheets/globals/colors.css.scss
@@ -1,10 +1,10 @@
 $dark-blue: #1F355E;
 $medium-blue: #5D73B1;
 $light-blue: #93A3CA;
-$pale-blue: #DEE5EF; // TODO: unused?
+$pale-blue: #DEE5EF;
 
-$yellow: #EFBC45; // Spec is wrong: my best guess.
-$pale-yellow: #FDD88B; // Not in spec.
+$yellow: #EFBC45;
+$pale-yellow: #FDD88B;
 $red: #8F152C;
 
 $dark-grey: #414141; // TODO: unused?
@@ -12,4 +12,4 @@ $medium-grey: #6E6F71; // TODO: unused?
 $light-grey: #939598;
 $pale-grey: #F1F1F1;
 
-$transparent: rgba(0, 0, 0, 0.6); // TODO: not sure about spec.
+$transparent: rgba(0, 0, 0, 0.6);
