Proof of concept. The actual generated CSS is easy to understand, but the generation is tricky.

--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -1,5 +1,7 @@
 <a href="/catalog/<%= document.id %>">
-  <img src="<%= document[:thumbnail_src] %>">
+  <div class="img-crop">
+    <img src="<%= document[:thumbnail_src] %>">
+  </div>
   <div class="info">
     <%= document[:title] %>
   </div>
