--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -4,7 +4,9 @@
 <div id="sidebar">
   <div class="container">
     <div class="row">
-      <%= render 'search_sidebar' %>
+      <div class="col-md-12">
+        <%= render 'search_sidebar' %>
+      </div>
     </div>
   </div>
 </div>
