Figured out the loop.

--- a/app/assets/stylesheets/locals/img-crop.css.scss
+++ b/app/assets/stylesheets/locals/img-crop.css.scss
@@ -13,21 +13,14 @@ $aspect: 362 / 229;
             ) - $grid-gutter-width;
 }
 
-
-@media (min-width: $screen-sm-min) {
-    .col-sm-6 .img-crop {
-        height: width($screen-sm-min, 6) / $aspect;
-    }
-}
-
-@media (min-width: $screen-md-min) {
-    .col-md-4 .img-crop {
-        height: width($screen-md-min, 4) / $aspect;
-    }
-}
-
-@media (min-width: $screen-lg-min) {
-    .col-lg-3 .img-crop {
-        height: width($screen-lg-min, 3) / $aspect;
+@each $pair in ('sm' $screen-sm-min, 'md' $screen-md-min, 'lg' $screen-lg-min) {
+    @each $factor in (1 2 3 4 6) {
+        $size: nth($pair, 1);
+        $screen-min: nth($pair, 2);
+        @media (min-width: $screen-min) {
+            .col-#{$size}-#{$factor} .img-crop {
+                height: width($screen-min, $factor) / $aspect;
+            }
+        }
     }
 }
