--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
   <div class="row">
     <% {
         series: 'Browse titles in the WGBH Media Library and Archives collection.',
-        exhibits: 'Explore selected topics and digitized programs of historical significance curated by WGBH Mellon Scholars',
+        exhibits: 'Explore selected topics and digitized programs of historical significance curated by WGBH Mellon Scholars.',
         collections: 'Check out collections of significant WGBH productions, including unique full-length interviews.'
       }.each do |key,description| %>
       <div class="col-md-4">
