Fix broken link

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,7 +19,7 @@
         <p><%= link_to('Credits', '/credits') %></p>
         <p><%= link_to('Privacy Policy', '/privacy-policy') %></p>
         <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
-        <p><%= link_to('Visiting the Archives', '/visiting the archives') %></p>
+        <p><%= link_to('Visiting the Archives', '/visiting-the-archives') %></p>
       </ul>
     </div>
   </div>    
