Use mixin for CSS aspect-ratio

--- a/app/assets/stylesheets/locals/aspect-ratio.css.scss
+++ b/app/assets/stylesheets/locals/aspect-ratio.css.scss
@@ -1,20 +1,47 @@
-// Inspired by https://css-tricks.com/snippets/sass/maintain-aspect-ratio-mixin/
+// Inspired by https://css-tricks.com/snippets/sass/maintain-aspect-ratio-
+// mixin/ but removed use of pseudo element because I don't think it is needed
+// to get the desired effect. See below for examples of usage within markup.
 
-.aspect-ratio {
-  $ratio: 362 / 229;
+@mixin aspect-ratio($width, $height) {
   position: relative;
-  &:before {
-    display: block;
-    content: "";
-    width: 100%;
-    padding-top: 100% / $ratio;
-  }
-  > .content {
+
+  // When padding is a %, it's calculated as a % of the width of the
+  // containing box. This is how the ratio is maintained.
+  padding-bottom: 100% / ($width / $height);
+
+  // Hide anything outside of the .content box. This can be parameterized in
+  // the mixin if we need to turn it on/off.
+  overflow: hidden;
+
+  // For the contained content, we have an immediate child container that
+  // stretches to it's parent. If you want style the *inside* of the content
+  // within the aspec-ratio container, then apply those styles to the .content
+  // element.
+  > .aspect-ratio-content {
+    // stretch the .content element to it's parent with positioning.
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    overflow: hidden; // Not in example, but seems necessary to me.
   }
 }
+
+// Implement a 16x9 class
+.aspect-ratio-16x9 {
+  @include aspect-ratio(16, 9);
+}
+
+// Implement a 4x3 class
+.aspect-ratio-4x3 {
+  @include aspect-ratio(4, 3);
+}
+
+
+// Examples of usage within markup:
+// 
+// <div class="aspect-ratio-16x9">
+//   <div class="aspect-ratio-content">
+//     Content in here will maintain a 16:9 aspect ratio.
+//   </div>
+// </div>
