--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -1,6 +1,6 @@
 <a href="/catalog/<%= document.id %>">
-  <div class="aspect-ratio">
-    <div class="content">
+  <div class="aspect-ratio-16x9">
+    <div class="aspect-ratio-content">
       <img src="<%= document[:thumbnail_src] %>">
     </div>
   </div>
