--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -86,5 +86,12 @@
         #documents .document {
             border: none;
         }
+        
+        iframe {
+            // (For embeds)
+            width: 380px;
+            height: 260px;
+            border: none;
+        }
     }
 }
