--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -1,27 +1,2 @@
-<% content_for(:page_title) do %>
-  <%= @item.title + ' - ' + t('blacklight.application_name') %>
-<% end %>
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <a href="/collections" class="back"><%= t('collections') %></a>
-      <%= render partial: 'shared/above_tabs', locals: {item: @item} %>
-    </div>
-  </div>
-  <%= render partial: 'shared/tab_row', locals: {item: @item, skip: ['intro', 'extra']}%>
-  <div class="row">
-    <div class="col-md-12">
-      <% @item.tabs[params[:tab]].tap do |current_tab| %>
-        <% if current_tab.respond_to?(:each) %>
-          <%= render partial: 'shared/document_grid', locals: {documents: current_tab} %>
-        <% else %>
-          <%= current_tab.html_safe if current_tab %>
-        <% end %>
-      <% end %>
-    </div>
-    <div class="col-md-12">
-      <%= @item.tabs['extra'].html_safe if @item.tabs['extra']%>
-    </div>
-  </div>
-</div>
+<%= render partial: 'shared/collection_exhibit_show',
+           locals: {parent_url: '/collections', item: @item} %>
