--- a/app/views/shared/_collection_exhibit_show.html.erb
+++ b/app/views/shared/_collection_exhibit_show.html.erb
@@ -17,16 +17,16 @@
           <% top_docs = current_tab[0..11] %>
           <% other_docs = current_tab[12..-1] %>
           <%= render partial: 'shared/document_grid', locals: {documents: top_docs} %>
-          <div class="clearfix"/>
-          <% if !other_docs.empty? %>
+          <% if other_docs && !other_docs.empty? %>
+            <div class="clearfix"/>
             <p>And <%= other_docs.count %> more...</p>
-          <% end %>
-          <% other_docs.in_groups(2, false).each do |docs_col| %>
-            <div class="col-sm-6">
-              <% docs_col.each do |doc| %>
-                <a href="/catalog/<%= doc.id %>"><%= doc.title %></a><br/>
-              <% end %>
-            </div>
+            <% other_docs.in_groups(2, false).each do |docs_col| %>
+              <div class="col-sm-6">
+                <% docs_col.each do |doc| %>
+                  <a href="/catalog/<%= doc.id %>"><%= doc.title %></a><br/>
+                <% end %>
+              </div>
+            <% end %>
           <% end %>
         <% else %>
           <%= current_tab.html_safe if current_tab %>
