Not the primary problem, but also needs fixing.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -104,6 +104,7 @@
             .slider-selection {
                 background: $medium-grey;
             }
+            .facet-values { display: none !important; }
         }
     }
 
