Adds Whitney font as default font
Sets some font variables for the various weights. Uses words instead of numbers
to jive with the written spec better.

toward #25

--- a/app/assets/stylesheets/globals/defaults.css.scss
+++ b/app/assets/stylesheets/globals/defaults.css.scss
@@ -1,6 +1,5 @@
 html > body {
-    // TODO: "Whitney SSm A", "Whitney SSm B" ?
-    font-family: sans-serif;
+    font-family: $font-family;
     font-size: 18px; // Best guess
     a:hover { text-decoration: none; } // No examples in specs of underline.
     h1 {
