--- a/app/assets/stylesheets/globals/fonts.css.scss
+++ b/app/assets/stylesheets/globals/fonts.css.scss
@@ -1,3 +1,11 @@
 // Whitney (sans serif):
-//@import url("http://cloud.typography.com/7419092/765888/css/fonts.css");
-// TODO?
+@import url("//cloud.typography.com/7419092/6220752/css/fonts.css");
+
+$font-family: "Whitney SSm A", "Whitney SSm B", sans-serif;
+
+// weights
+$light: 300;
+$book: 400;
+$medium: 500;
+$semibold: 600;
+$bold: 700;
