Applies typography spec where it's known
toward #25

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,9 +7,9 @@
         All rights reserved
       </div>
       <ul class="col-sm-4 col-xs-6">
-        <p><b><%= link_to(t('series'), '/series') %></b></p>
-        <p><b><%= link_to(t('exhibits'), '/exhibits') %></b></p>
-        <p><b><%= link_to(t('collections'), '/collections') %></b></p>
+        <p><%= link_to(t('series'), '/series', class: 'footer-link-1') %></p>
+        <p><%= link_to(t('exhibits'), '/exhibits', class: 'footer-link-1') %></p>
+        <p><%= link_to(t('collections'), '/collections', class: 'footer-link-1') %></p>
       </ul>
       <ul class="col-sm-3 col-xs-6">
         <p><%= link_to('About Us', '/about') %></p>
