--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
       <h3>What is Open Vault?</h3>
       <p>We provide online access to unique and historically important content
         produced by the public television and radio station WGBH.</p>
-      <p><b><a href="/about">About Us</a></b></p>
+      <p><a href="/about">About Us</a></p>
     </div>
     <div class="col-sm-6 text-center">
       <h3>Follow Us!</h3>
@@ -43,9 +43,7 @@
       </a>
     </div>
     <div class="col-sm-2 text-center">
-      <a href="http://blog.openvault.wgbh.org/" target="_blank" class="btn btn-lg">
-        <b>Blog</b>
-      </a>
+      <a href="http://blog.openvault.wgbh.org/" target="_blank" class="btn btn-lg">Blog</a>
     </div>
   </div>
 </div>
