Did not track down root cause, but this fixes #150.

--- a/app/assets/stylesheets/locals/catalog-index.css.scss
+++ b/app/assets/stylesheets/locals/catalog-index.css.scss
@@ -4,6 +4,7 @@
     }
     #facets {
         .top-panel-heading { border: none; } // Only matters on xs screen width.
+        a { text-decoration: none; } // They were only erratically appearing.
         padding: 0px;
     }
     #appliedParams {
