Applies font weights to footer
* Gets rid of conditional CSS classes in favor of a conditional
  in the view to alternate between homepage footer logo, and the
  default logo.
* Shrunk the copyright a little. Not in the spec, but i think it looks better.
* Uses bootstrap cols in the footer.

more toward #25

--- a/app/assets/stylesheets/locals/header-footer.css.scss
+++ b/app/assets/stylesheets/locals/header-footer.css.scss
@@ -22,7 +22,16 @@
 
 #footer {
     background: $light-grey;
-    .only-home { display: none; }
+    font-size: 22px;
+
+    .primary-links a {
+      font-weight: $semibold;
+    }
+
+    .copyright {
+      margin-top: 20px;
+      font-size: 14px;
+    }
 }
 
 #header,#footer {
