--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,17 +1,14 @@
 <div id="footer" class="container-fluid">
   <div class="container">
     <div class="row">
-      <div class="col-sm-5 col-xs-6 pull-right">
-        <img class="not-home" src="/wgbh-logo.svg"><img class="only-home" src="/wgbh-logo-grey.svg"><br/>
-        Copyright &copy; 2015 WGBH Educational Foundation<br/>
-        All rights reserved
-      </div>
-      <ul class="col-sm-4 col-xs-6">
-        <p><%= link_to(t('series'), '/series', class: 'footer-link-1') %></p>
-        <p><%= link_to(t('exhibits'), '/exhibits', class: 'footer-link-1') %></p>
-        <p><%= link_to(t('collections'), '/collections', class: 'footer-link-1') %></p>
+      <ul class="col-md-4 col-xs-12 primary-links">
+      <!-- <ul class="col-sm-4 col-xs-6"> -->
+        <p><%= link_to(t('series'), '/series') %></p>
+        <p><%= link_to(t('exhibits'), '/exhibits') %></p>
+        <p><%= link_to(t('collections'), '/collections') %></p>
       </ul>
-      <ul class="col-sm-3 col-xs-6">
+      <ul class="col-md-4 col-xs-12">
+      <!-- <ul class="col-sm-3 col-xs-6"> -->
         <p><%= link_to('About Us', '/about') %></p>
         <p><%= link_to('Blog', 'http://blog.openvault.wgbh.org/') %></p>
         <p><%= link_to('Contact Us', '/contact-us') %></p>
@@ -21,6 +18,13 @@
         <p><%= link_to('Terms and Conditions', '/terms-and-conditions') %></p>
         <p><%= link_to('Visiting the Archives', '/visiting the archives') %></p>
       </ul>
+      <div class="col-md-4 col-xs-12">
+        <img src="<%= (params[:controller] == 'home') ? "/wgbh-logo-grey.svg" : "/wgbh-logo.svg" %>" />
+        <div class="copyright">
+          Copyright &copy; 2015 WGBH Educational Foundation<br/>
+          All rights reserved
+        </div>
+      </div>
     </div>
   </div>    
 </div>
