This whole blob of html around the player needs cleanup, but we at least get prev/next on the page.

--- a/app/assets/stylesheets/locals/catalog-show.css.scss
+++ b/app/assets/stylesheets/locals/catalog-show.css.scss
@@ -12,4 +12,7 @@
         background-color: $pale-grey;
         padding: $grid-gutter-width/2 0;
     }
+    #playlist {
+        width: 100%;
+    }
 }
